# claude-blueprints

./: .gitignore  CLAUDE.md  README.md  TODO.md  _REAL_VERSION.url  settings.json  sync-check.py  sync-check.sh  sync-resolve.sh
archive/sanitizer/: STATUS.md  sanitizer.json  sanitizer.tests.ps1
archive/sanitizer/cmd/sanitizer/: main.go
archive/sanitizer/internal/: exec.go  file.go  hook_bash.go  hook_post.go  hook_session.go  ip.go
commands/: 1note.md  benchmark.md  claude-pull.md  claude-push.md  debug.md  deps.md  dev.md  dist.md  done.md  endless.md  entity.md  fix-auth.md  kovarex.md  learn.md  load.md  release.md  rtfm.md  test.md
discussions/: rust-ansible.md
extensions/hush/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  allowlist.defaults.json  background.js  content.js  mainworld.js  manifest.json  options.html  options.js  package.json  popup.html  popup.js  sites.json
extensions/hush/.cargo/: config.toml
extensions/hush/bench/: compute_suggestions.mjs
extensions/hush/benches/: compute_suggestions.rs
extensions/hush/crates/engine/: Cargo.toml
extensions/hush/crates/engine/src/: compute.rs  detectors.rs  learn.rs  lib.rs  stack.rs  suggestion.rs
extensions/hush/crates/types/: Cargo.toml
extensions/hush/crates/types/src/: lib.rs
extensions/hush/docs/: README.md  amazon.md  architecture.md  benchmarks.md  comparison.md  completed.md  github.md  heuristic-roadmap.md  history.md  reddit.md  roadmap.md  rust-migration-plan.md
extensions/hush/src/: allowlist.rs  background.rs  canon.rs  chrome_bridge.rs  compute.rs  content.rs  detectors.rs  learn.rs  lib.rs  lint.rs  main_world.rs  simulate.rs  suggestion.rs  types.rs  ui_options.rs  ui_popup.rs
extensions/hush/test/: emit_contract.test.mjs
extensions/hush/tools/: log-server.mjs
hooks/: Hook-PowerShell.ps1  Hook-SessionStart-Skills.ps1
sanitizer/: .gitignore  AutoRenderReal.ps1  Hook-Bash.ps1  Hook-FileAccess.ps1  Hook-PowerShell.ps1  Hook-SessionStart.ps1  Hook-SessionStop.ps1  Hook-Stop.ps1  Initialize.ps1  README.md  RenderReal.ps1  RunWrapper.ps1  Sanitize.ps1  SanitizeOutput.ps1  Sanitizer.psm1  SealedExec.ps1  Unsanitize.ps1  benchmark-coldstart.ps1  benchmark-hook-bash-fake.ps1  benchmark-hook-bash.ps1  benchmark-hook-fileaccess.ps1  benchmark-session-start.ps1  benchmark.ps1  go.mod  sanitizer.json.example  sanitizer.tests.ps1  secrets.json.example  test-full.ps1  test-hook-bash.ps1  test.ps1
sanitizer-go/: README.md  benchmark-coldstart.ps1  benchmark-hook-bash-fake.ps1  benchmark-hook-bash.ps1  benchmark-hook-fileaccess.ps1  benchmark-session-start.ps1  benchmark.ps1  go.mod  test-full.ps1  test-hook-bash.ps1
sanitizer-go/cmd/sanitizer/: main.go
sanitizer-go/internal/: config.go  file.go  hook_bash.go  hook_fileaccess.go  hook_session.go
sanitizer-go/internal/config/: config.go
sanitizer-go/internal/fileutil/: fileutil.go
sanitizer-go/internal/hook/: bash.go  fileaccess.go  sessionstart.go  sessionstop.go
sanitizer-go/internal/sanitize/: ip.go  text.go
sanitizer-go/internal/scrub/: ip.go
sanitizer/cmd/sanitizer/: main.go
sanitizer/internal/: config.go  exec.go  file.go  hook_bash.go  hook_fileaccess.go  hook_post.go  hook_session.go  ip.go  text.go
scripts/: 1note.ps1  chrome_cpu_profile.py  dehyphen.py  dehyphen_sweep.py  google_search.md  google_search.py  install-git-hooks.sh
scripts/git-hooks/: pre-commit
skills/: ansible-powershell.md  ansible.md  automation-code.md  bevy.md  claude-code-config.md  claude-config.md  code.md  coding.md  godot.md  golang.md  infrastructure-troubleshooting.md  linguistic-breakbeats-labyrinth.md  powershell.md  python.md  rust.md  skill-management.md  try-harder.md  vmware-esxi-performance.md  vsphere-influxdb.md  wgsl.md
skills/1note/: SKILL.md
skills/abixio/: SKILL.md
skills/ahk/: SKILL.md
skills/ansible/: SKILL.md
skills/approve/: SKILL.md
skills/assembly/: SKILL.md
skills/bash/: SKILL.md
skills/benchmark/: SKILL.md
skills/bevy/: SKILL.md
skills/claude-code-deep-dive/: SKILL.md
skills/claude-config/: SKILL.md
skills/code/: SKILL.md
skills/csharp/: SKILL.md
skills/debloat/: SKILL.md
skills/debug/: SKILL.md
skills/dev/: SKILL.md
skills/docs/: SKILL.md
skills/done/: SKILL.md
skills/endless/: SKILL.md
skills/endless-cli/: SKILL.md
skills/entity/: SKILL.md
skills/eufy/: SKILL.md
skills/factoriobot/: SKILL.md
skills/fix-auth/: SKILL.md
skills/godot/: SKILL.md
skills/golang/: SKILL.md
skills/grounded2/: SKILL.md
skills/grounded2-rpg/: SKILL.md
skills/help/: SKILL.md
skills/hush/: SKILL.md
skills/infrastructure-troubleshooting/: SKILL.md
skills/issue/: SKILL.md
skills/jinja/: SKILL.md
skills/k3s/: SKILL.md
skills/k3sc/: SKILL.md
skills/kovarex/: SKILL.md
skills/learn/: SKILL.md
skills/linguistic-breakbeats-labyrinth/: SKILL.md
skills/load/: SKILL.md
skills/lua/: SKILL.md
skills/n/: SKILL.md
skills/obey/: SKILL.md
skills/outworld-station/: SKILL.md
skills/powershell/: SKILL.md
skills/python/: SKILL.md
skills/reject/: SKILL.md
skills/release/: SKILL.md
skills/review/: SKILL.md
skills/rtfm/: SKILL.md
skills/runtime-control-http/: SKILL.md
skills/rust/: SKILL.md
skills/schedule1/: SKILL.md
skills/test/: SKILL.md
skills/timberborn/: SKILL.md
skills/timberbot-release/: SKILL.md
skills/try-harder/: SKILL.md
skills/typescript/: SKILL.md
skills/ueforge/: SKILL.md
skills/vmware-esxi-performance/: SKILL.md
skills/vsphere-influxdb/: SKILL.md
skills/wgsl/: SKILL.md
skills/why/: SKILL.md
skills/wsl/: SKILL.md
skills/yaml/: SKILL.md
wezterm/: .wezterm.lua  README.md  claude-next.ps1
