[workspace]
resolver = "3"
members = [
    "crates/types",
    "crates/engine",
]

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "MIT"
authors = ["abix <abix85@gmail.com>"]
repository = "https://github.com/abix-/claude-blueprints"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
# RFC 3986 URL parsing. Used for canonicalization and host extraction
# from stack-trace frames. Adds ~80 KB to the WASM bundle but buys us
# punycode/IDN handling and keeps us out of regex land.
url = "2.5"
# Ordered key-preserving map. The options JSON editor UX relies on
# insertion order being stable; BTreeMap would sort alphabetically.
indexmap = { version = "2.5", features = ["serde"] }

# Release profile for WASM output: small + fast.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
