[package]
name = "hush"
version = "0.10.0"
edition = "2024"
rust-version = "1.95"
license = "GPL-3.0-or-later"
authors = ["abix <abix85@gmail.com>"]
repository = "https://github.com/abix-/claude-blueprints"
description = "Per-site element hiding, DOM removal, and network blocking for Chrome (MV3). Detection engine in Rust, JS glue for the chrome APIs."

[lib]
# wasm-pack --target web needs cdylib. rlib is kept so cargo test can
# exercise the pure-Rust code without going through wasm.
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
js-sys = "0.3"
# Async integration between wasm-bindgen futures and JS promises.
# Used by the popup's Leptos components to call chrome.runtime.sendMessage
# + chrome.storage.local.* without bouncing back to JS glue.
wasm-bindgen-futures = "0.4"
# RFC 3986 URL parsing. Used for canonicalization and host extraction
# from stack-trace frames. Adds ~80 KB to the WASM bundle but buys us
# punycode/IDN handling and keeps us out of regex land.
url = "2.5"
# Ordered key-preserving map. The options JSON editor UX relies on
# insertion order being stable; BTreeMap would sort alphabetically.
indexmap = { version = "2.5", features = ["serde"] }
# Typed bindings to browser Web APIs. Feature set is Stage 3 territory
# (main-world hook installation via web_sys::CustomEvent + HtmlCanvasElement);
# listed here so the crate is ready without re-plumbing dependencies.
leptos = { version = "0.8", features = ["csr"] }
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "EventTarget",
    "CustomEvent",
    "CustomEventInit",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "DomRect",
    "CssStyleDeclaration",
    "Performance",
    "Navigator",
    "Clipboard",
    "console",
] }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
# Used by SignalPayload roundtrip tests. Not pulled in at runtime; the
# JS/Rust boundary uses serde-wasm-bindgen, not JSON.
serde_json = "1.0"

[features]
default = ["panic-hook"]
# Routes Rust panics through console.error with a full stack so bugs in
# the wasm side are debuggable from DevTools. ~4 KB cost; keep on for
# dev, strip for release if size matters.
panic-hook = ["dep:console_error_panic_hook"]

# rustc 1.95 emits `i64.trunc_sat_f64_s` by default (nontrapping-fptoint
# feature). wasm-pack 0.14's bundled wasm-opt is too old to validate it.
# Disable wasm-opt until the bundled version catches up.
[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# Release profile for WASM output: small + fast.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
