[package]
name = "hush"
version = "0.11.0"
edition = "2024"
rust-version = "1.95"
license = "GPL-3.0-or-later"
authors = ["abix <abix85@gmail.com>"]
repository = "https://github.com/abix-/claude-blueprints"
description = "Per-site element hiding, DOM removal, and network blocking for Chrome (MV3). Detection engine in Rust, JS glue for the chrome APIs."

[lib]
# wasm-pack --target web needs cdylib. rlib is kept so cargo test can
# exercise the pure-Rust code without going through wasm.
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
js-sys = "0.3"
# Async integration between wasm-bindgen futures and JS promises.
# Used by the popup's Leptos components to call chrome.runtime.sendMessage
# + chrome.storage.local.* without bouncing back to JS glue.
wasm-bindgen-futures = "0.4"
# Fast non-cryptographic hasher. Beats std SipHash + FxHash + aHash on
# small-string keys per the maintainer's benchmarks (foldhash README,
# 2025). All per-detector HashMaps in the engine are string-keyed
# (host names), so the swap maps straight onto our hot path.
foldhash = "0.1"
# RFC 3986 URL parsing. Used for canonicalization and host extraction
# from stack-trace frames. Adds ~80 KB to the WASM bundle but buys us
# punycode/IDN handling and keeps us out of regex land.
url = "2.5"
# Ordered key-preserving map. The options JSON editor UX relies on
# insertion order being stable; BTreeMap would sort alphabetically.
indexmap = { version = "2.5", features = ["serde"] }
# Typed bindings to browser Web APIs. Feature set is Stage 3 territory
# (main-world hook installation via web_sys::CustomEvent + HtmlCanvasElement);
# listed here so the crate is ready without re-plumbing dependencies.
leptos = { version = "0.8", features = ["csr"] }
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "DocumentFragment",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlAnchorElement",
    "HtmlStyleElement",
    "HtmlIFrameElement",
    "Node",
    "NodeList",
    "EventTarget",
    "Event",
    "KeyboardEvent",
    "MouseEvent",
    "CustomEvent",
    "CustomEventInit",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "DomRect",
    "CssStyleDeclaration",
    "Location",
    "Performance",
    "PerformanceEntry",
    "PerformanceObserver",
    "PerformanceObserverInit",
    "PerformanceObserverEntryList",
    "PerformanceResourceTiming",
    "MutationObserver",
    "MutationObserverInit",
    "Url",
    "Blob",
    "Navigator",
    "Clipboard",
    "console",
] }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
# Used by SignalPayload roundtrip tests. Not pulled in at runtime; the
# JS/Rust boundary uses serde-wasm-bindgen, not JSON.
serde_json = "1.0"
# Statistical benchmark harness for comparing compute_suggestions
# throughput against the pre-port JS baseline. Criterion produces
# stable mean + stddev with outlier filtering; the JS side uses Node's
# built-in performance.now for the same synthetic fixture.
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "compute_suggestions"
harness = false

[features]
default = ["panic-hook"]
# Routes Rust panics through console.error with a full stack so bugs in
# the wasm side are debuggable from DevTools. ~4 KB cost; keep on for
# dev, strip for release if size matters.
panic-hook = ["dep:console_error_panic_hook"]

# rustc 1.95 emits `i64.trunc_sat_f64_s` by default (nontrapping-fptoint
# feature). wasm-pack 0.14's bundled wasm-opt is too old to validate it.
# Disable wasm-opt until the bundled version catches up.
[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# Release profile tuned for RUNTIME SPEED over binary size.
# The WASM bundle ships larger (from ~700KB at opt-level=z up to
# ~1.0-1.5MB at opt-level=3) but the in-browser hot paths (hook
# dispatch, compute_suggestions) run at native-like speed. User-
# perceived win: faster popup open, faster per-page scan.
# Trade-off accepted because runtime perf is the product goal -
# bundle loads once per tab session, hot paths run thousands of
# times over that session.
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
debug = false

# Maximum-speed profile that `cargo bench` picks up.
# Per the Rust Performance Book, the knobs that actually move runtime
# cost are:
# - opt-level = 3: full auto-vectorization, inlining, loop unrolling
# - lto = "fat": whole-program optimization across the crate graph
# - codegen-units = 1: one LLVM compilation unit so the inliner can
#   reason across the whole crate (supersedes incremental=false for
#   runtime perf - they do the same thing from different angles)
# - panic = "abort": no unwinding tables, smaller hot paths
# - debug = false + strip = "symbols": smaller binary, better icache
#
# The companion knob `-C target-cpu=native` lives in
# `.cargo/config.toml` and is only applied to non-wasm targets
# (native binaries here only come from bench + test runs).
[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
strip = "symbols"
