[package]
name = "hush-engine"
version = "0.9.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Detection engine for Hush. Pure Rust, compiled to WASM for the Chrome extension."

[lib]
# wasm-pack --target web needs cdylib. rlib is kept so cargo test can
# exercise the pure-Rust code without going through wasm.
crate-type = ["cdylib", "rlib"]

[dependencies]
hush-types = { path = "../types" }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
url = { workspace = true }
console_error_panic_hook = { workspace = true, optional = true }

[features]
default = ["panic-hook"]
# When enabled, panics in the engine route through console.error with a
# full Rust stack so bugs in the wasm side are debuggable from DevTools.
# Pay the ~4 KB binary cost for dev builds; strip for release.
panic-hook = ["dep:console_error_panic_hook"]

# rustc 1.95 emits `i64.trunc_sat_f64_s` by default (nontrapping-fptoint
# feature). The wasm-opt bundled with wasm-pack 0.14 is too old to
# validate it. Disable wasm-opt until tooling catches up; binary size is
# acceptable for dev, and release can invoke a newer wasm-opt manually.
[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
