[package]
name = "hush-types"
version = "0.9.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared types for the Hush extension engine and IO boundaries."

[dependencies]
serde = { workspace = true }
indexmap = { workspace = true }
